{{$NEXT}}

0.842     2013-07-03 23:20:21 Europe/Berlin
 
    - Adding Changes stuff.
  
0.840

    - This was the beginning, back in the days, when no Changelog was kept.