@@ -4,72 +4,75 @@ license          = Perl_5
 copyright_holder = Daniel B.
 copyright_year   = 2012
 
-version          = 0.842
+version          = 0.850
 
 [@Filter]
-  -bundle = @Classic
-  -remove = ExtraTests
-  -remove = PodVersion
+-bundle          = @Classic
+-remove          = ExtraTests
+-remove          = PodVersion
 
 [Authority]
-    authority = cpan:DBR
+authority        = cpan:DBR
 
-[ConfirmRelease]
-[NextRelease]
-[EOLTests]
-[MetaJSON]
-[ModuleBuild]
-[NoTabsTests]
-[ReadmeFromPod]
-[TestRelease]
-[AutoPrereqs]
-[Test::ReportPrereqs]
-[Test::CheckDeps]
-; [ReportPhase]
-[ReportVersions]
-[Test::MinimumVersion]
-[CheckPrereqsIndexed]
-[CheckVersionIncrement]
-[SpellingCommonMistakesTests]
-[Test::UseAllModules]
-[MetaProvides::Class]
-[SchwartzRatio]
-[MetaTests]
-[CheckExtraTests]
-[RunExtraTests]
-[InstallGuide]
-[PodWeaver]
-[ShareDir::Tarball]
 [@Git]
-changelog   = Changes             ; this is the default
-allow_dirty = dist.ini            ; see Git::Check...
-allow_dirty = Changes             ; ... and Git::Commit
-commit_msg  = v%v%n%n%c           ; see Git::Commit
-tag_format  = %v                  ; see Git::Tag
-tag_message = %v                  ; see Git::Tag
-push_to     = origin              ; see Git::Push
-
-; [ContributorsFromGit]
+changelog        = Changes             ; this is the default
+allow_dirty      = dist.ini            ; see Git::Check...
+allow_dirty      = Changes             ; ... and Git::Commit
+commit_msg       = v%v%n%n%c           ; see Git::Commit
+tag_format       = %v                  ; see Git::Tag
+tag_message      = %v                  ; see Git::Tag
+push_to          = origin              ; see Git::Push
 
 [Test::Portability]
-  test_vms_length  = 0
-  test_ansi_chars  = 0
-  test_one_dot     = 0
+test_vms_length  = 0
+test_ansi_chars  = 0
+test_one_dot     = 0
 
 [PruneCruft]
-  except = '.gitignore'
+except           = '.gitignore'
 
 [ExecDir]
-  dir= bin
+dir              = bin
+
+[InstallRelease]
+install_command  = cpanm .
 
 
 ; [@Apocalyptic]
 ; [CheckChangeLog]
+; [ContributorsFromGit]
+; [ReportPhase]
+[AutoPrereqs]
 [CheckChangesHasContent]
+[CheckExtraTests]
+[CheckPrereqsIndexed]
+[CheckVersionIncrement]
+[ConfirmRelease]
+[EOLTests]
+[InstallGuide]
+[MetaJSON]
+[MetaProvides::Class]
+[MetaTests]
+[ModuleBuild]
+[NextRelease]
+[NoTabsTests]
+[PodWeaver]
+[ReadmeFromPod]
+[ReportVersions]
+[RunExtraTests]
+[SchwartzRatio]
+[ShareDir::Tarball]
+[SpellingCommonMistakesTests]
 [Test::ChangesHasContent]
+[Test::CheckDeps]
 [Test::CheckManifest]
-[InstallRelease]
-install_command  = cpanm .
+[Test::MinimumVersion]
+[Test::ReportPrereqs]
+[Test::UseAllModules]
+[TestRelease]
+
+
+
 
 
 
